  - Enable =pixel-scroll-precision-mode= (since Emacs 29.1).
  - Global keybinding =C-c e r= to call ~M-x restart-emacs~ (Emacs 29.1).
  - Global keybinding =C-c e q= to call ~M-x yet-kill-emacs-reset-desktop~.
  - Advice ~yet-org-export-output-file-name~ uses temporary directory by
    default.
  - Enable =web-mode-enable-current-column-highlight= to highlight matching pair
    of tags.

*** Changed:
  - Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
  - Rename ~yet-kill-emacs-reset-desktop-state~ to ~yet-kill-emacs-reset-desktop~.

*** Removed:
  - Package =org-preview-html= in favor of =C-c C-e h o= (~org-export-dispatch~).


** v2.2.0 - 2023-08-05

This release wraps up further improvements made for *Emacs 28.2*. Future commits
are planned to be *Emacs 29* -oriented (ideally, preserving backward
compatibility).

The main highlights of this release are as follows:
- Better keybindings for =rust-mode=, =php-mode=, =eglot=.
- Local configuration (~yet-~ constants related) improvements.
- =web-mode= usability improvements.
- New packages: =fish-mode=, =imenu-list=.

*** Added:
  - =rust-mode= abbreviations (templates). See ~M-x list-abbrevs~.
  - =rust-mode-map= keybindings:
    - =C-c C-l= for ~M-x rust-run-clippy~.
    - =C-c C-h= for ~M-x yet-rustup-doc~.
    - =C-c t m= for ~M-x rust-toggle-mutability~.
  - =php-mode-map= keybinding =C-c C-h= to call ~M-x php-search-documentation~.
  - Disable =eglot-inlay-hints-mode= by default.
  - Keybinding =C-c l i= to toggle =eglot-inlay-hints-mode=.
  - Package =fish-mode= for ~fish~ shell scripts editing.
  - Local configuration =yet-source-directory=.
  - Experimental: utilize =company-tooltip-annotation-padding=.
  - Local configuration =yet-explicit-shell-file-name=.
  - Docstrings to ~yet-~ namespaced constants in ~/examples/local-pre-init.el~.
  - Local configuration =yet-auth-sources=.
  - Local configuration =yet-mail-personal-alias-file=.